--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Start Header -->
     <nav class="navbar navbar-expand-lg bg-light shadow">
         <div class="container">
-            <a class="navbar-brand text-dark" href="#">LOGO</a>
+            <a class="navbar-brand text-dark" href="#">FshionStore</a>
             <div class="d-flex align-items-center">
                 <div class="navbar-options d-lg-none d-sm-block mr-3">
                     <i class="fas fa-heart mr-2"></i>
